# slicer

./: slicer.cabal
src/: Slicer.hs
