name:
  slicer
version:
  0.0.1
synopsis:
  See readme.md
description:
  See readme.md for description.
category:
  project
homepage:
  https://github.com/tonyday567/slicer
license:
  BSD3
license-file:
  LICENSE
author:
  Tony Day
maintainer:
  tonyday567@gmail.com
copyright:
  Tony Day
build-type:
  Simple
cabal-version:
  >=1.14
extra-source-files:

library
  default-language:
    Haskell2010
  ghc-options:
  hs-source-dirs:      
    src
  exposed-modules:
    Slicer
  build-depends:
    base >= 4.7 && < 5,
    vector,
    singletons,
    adjunctions,
    distributive,
    typelits-witnesses,
    ghc-typelits-natnormalise
  default-extensions:

source-repository head
  type:
    git
  location:
    https://github.com/tonyday567/slicer
